[package]
name = "gol-rs"
description = "A Game of Life simulator"
authors = ["Kian Heitkamp"]
version = "1.0.7"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.winres]
OriginalFilename = "gol.rs"
ProductName = "GOL.rs"
FileDescription = "Game of Life simulator"


[profile.release]
strip = true
lto = true
opt-level = 3

[dependencies]
macroquad = "0.4.4"

[build-dependencies]
winres = "0.1"