[package]
name = "MultiSim-rs"
description = "A simulation game"
authors = ["Kian Heitkamp"]
version = "2.0.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.winres]
OriginalFilename = "MultiSim-rs.exe"
ProductName = "Simulator game by Kian Heitkamp"
FileDescription = "Simulator game"

[profile.release]
strip = true
lto = true
opt-level = 3

[dependencies]
macroquad = {version = "0.4.4", features = ["audio"]}

[build-dependencies]
winres = "0.1"